objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>All_Fields_Verified__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Mozilla All Fields Verified?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Information_Verified__c</fullName>
        <label>Application Information Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Audit_Verified__c</fullName>
        <label>Applicable Audits Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_BR_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BR Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Code_Signing_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Signing Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_EV_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EV SSL Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_EV_Code_Signing_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EV Code Signing Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Standard_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Gap__c</fullName>
        <formula>Standard_Audit_Date_Gap__c || Code_Signing_Audit_Date_Gap__c || BR_Audit_Date_Gap__c || EV_SSL_Audit_Date_Gap__c || EV_Code_Signing_Audit_Date_Gap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Review_Results__c</fullName>
        <inlineHelpText>Results returned by Audit Letter Validation webservice</inlineHelpText>
        <label>ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Review_Status__c</fullName>
        <inlineHelpText>Status returned by Audit Letter Validation webservice</inlineHelpText>
        <label>ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>BR Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Browser_Forum_Lint_Test__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Provide evidence that you have tested and verified that no certificates issued in this CA hierarchy violate any of the CA/Browser Forum Baseline Requirements (BRs).&quot; &amp; BR() &amp;
&quot;BR Lint Test: https://github.com/awslabs/certlint&quot; &amp; BR() &amp; BR() &amp;
&quot;Mozilla will check that the CA is not issuing certificates that violate any of the BRs by using crt.sh on the root and subordinate CAs via: https://crt.sh/?caid=&lt;CA ID&gt;&amp;opt=cablint,zlint,x509lint&amp;minNotBefore=2014-01-01&quot; &amp; BR() &amp;
&quot;and/or&quot; &amp; BR() &amp; 
&quot;The Lint tests in https://crt.sh/?a=1&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Browse to https://crt.sh/ and enter the SHA-1 Fingerprint for the root certificate. Then click on the &apos;Search&apos; button. Then click on the &apos;Run cablint&apos; link. All errors must be resolved/fixed.</inlineHelpText>
        <label>CA/Browser Forum Lint Test</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Name_Existing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Previously called Included CA Owner Name</description>
        <label>CA Owner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Owner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_CPS_allows_Ext_Operated_SubCAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CP/CPS allows Externally Operated SubCAs?</inlineHelpText>
        <label>CP/CPS allows Ext Operated SubCAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_CPS_allows_External_RAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CP/CPS allows External Registration Authorities?</inlineHelpText>
        <label>CP/CPS allows External RAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_CAOwner_RootCert__c</fullName>
        <label>Case+CAOwner+RootCert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <label>Case No</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case_No__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Common_Name__c</fullName>
        <label>Certificate Issuer Common Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Serial_Number__c</fullName>
        <label>Certificate Serial Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Common_Name__c</fullName>
        <label>Certificate Subject Common Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Signing Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Root_Case__c</fullName>
        <label>Comments by Mozilla on Root Case</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Constraints_on_External_SubCAs_RAs__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Describe constraints on external subordinate CAs and RAs.&quot; &amp; BR() &amp; 
&quot;As per section 5.3 of Mozilla&apos;s Root Store Policy, provide the required data for all of your non-technically-constrained subordinate CA certificates that chain up to this root certificate.&quot; &amp; BR()&amp;
&quot;This data may be provided as follows:&quot; &amp; BR() &amp;
&quot;- If your CA has access to the CCADB, then you may provide this information directly in the CCADB.&quot; &amp; BR() &amp;
&quot;- Otherwise, provide this information in your Bugzilla Bug.&quot; &amp; BR(), 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Constraints on External SubCAs &amp; RAs</inlineHelpText>
        <label>Constraints on External SubCAs &amp; RAs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Signed_by_another_Root_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently Cross-Signed by another Root Cert?</inlineHelpText>
        <label>Cross-Signed by another Root Cert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Signing_Verified__c</fullName>
        <label>Cross Signing (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_of_PKI_Hierarchy__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: URL and/or Description of this PKI Hierarchy.&quot; &amp; BR() &amp;
&quot;Provide details related to any of the check-boxes above that are selected.&quot; &amp; BR() &amp; BR() &amp;
&quot;Add records for the existing intermediate certs to the CCADB as described here: https://ccadb.org/cas/intermediates#adding-intermediate-certificate-data&quot; &amp; BR() &amp; BR() &amp;
&quot;If Mozilla accepts and includes your root certificate, then we have to assume that we also accept any of your future sub-CAs and their sub-CAs. Therefore, the selection criteria for your sub-CAs and their sub-CAs will be a critical decision factor. As well as the documentation and auditing of operations requirements that you place on your sub-CAs and their sub-CAs.&quot; &amp; BR() &amp; BR() &amp;
&quot;If this root has any subordinate CA certificates that are operated by external third parties, then provide the information listed in the Subordinate CA Checklist in a separate document. https://wiki.mozilla.org/CA/Subordinate_CA_Checklist&quot; &amp; BR(), 
&quot;&quot;)</defaultValue>
        <inlineHelpText>URL or Description of Hierarchy. Provide details if any box checked</inlineHelpText>
        <label>Description of PKI Hierarchy</label>
        <length>1100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distrust_for_S_MIME_After_Date__c</fullName>
        <formula>Root_Certificate_Name_Existing__r.Distrust_for_SMIME_After_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distrust for S/MIME After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distrust_for_TLS_After_Date__c</fullName>
        <formula>Root_Certificate_Name_Existing__r.Distrust_for_TLS_After_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distrust for TLS After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EKU_Client_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Client Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Document_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Document Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_OCSP_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - OCSP Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Secured_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Secured Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Server_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Server Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Time_Stamping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Time Stamping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>EV Code Signing Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: EV OID if requesting EV treatment for this root. Mozilla strongly recommends that CAs use the standard CA/Browser Forum EV OID (2.23.140.1.1).&quot;, 
&quot;&quot;)</defaultValue>
        <label>Mozilla EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>EV SSL Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Tested__c</fullName>
        <defaultValue>&quot;NEED: If EV treatment is being requested, then provide successful output from EV Testing as described here https://wiki.mozilla.org/PSM:EV_Testing_Easy_Version&quot;</defaultValue>
        <inlineHelpText>If you are requesting to enable EV treatment, then you must provide successful output from the EV-Readiness Checking Tool. See https://wiki.mozilla.org/PSM:EV_Testing_Easy_Version</inlineHelpText>
        <label>EV Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_EV_for_Code_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable EV for Code Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_EV_for_Server_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable EV for Server Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Explain why this root cert needs to be included in the root store, rather than being signed by another CA’s root certificate that is already included.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Explain why this root needs to be included in the selected root store</inlineHelpText>
        <label>Explanation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extended_Key_Usage__c</fullName>
        <label>Extended Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Results__c</fullName>
        <label>Extraction Results</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_First_Included__c</fullName>
        <label>Firefox Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_External_Registration_Authorities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently has External Registration Authorities?</inlineHelpText>
        <label>Has External Registration Authorities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Externally_Operated_SubCAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently has Externally Operated SubCAs?</inlineHelpText>
        <label>Has Externally Operated SubCAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_Certificate_Name__c</fullName>
        <formula>Root_Certificate_Name_Existing__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Included Certificate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Audit Update Request&quot;,
&quot;1. In Edit mode, click on the &apos;Included Certificate&apos; search icon to select a root certificate that is covered by the audit statement(s).&quot; + BR() +
&quot;** Default list in Search shows recently viewed records. Be sure to enter the beginning of your cert name followed by asterisk (e.g. A*), and click on the &apos;Go!&apos; button.&quot; + BR() + 
&quot;2. Check the boxes corresponding to the audit statements that apply to the root certificate.&quot; + BR() + 
&quot;3. Provide the URLs to the test websites if the root certificate is trusted for TLS/SSL.&quot; + BR() + 
&quot;** If the root certificate is enabled for EV treatment, then the TLS/SSL certificates in the test websites must be EV. &quot; + BR() + 
&quot;4. Click &apos;Edit&apos; and &apos;Save&apos; buttons as needed to provide the information.&quot; + BR() + 
&quot;5. When finished, click on the &apos;Case No&apos; to go back to the Case page.&quot;,
 
&quot;1. Upon creation, enter the &apos;Root Certificate Name&apos;, then click on the &apos;Save&apos; button.&quot; + BR() + 
&quot;2. Click on the &apos;Add/Update PEM Info&apos; button and enter the PEM for the certificate to be included or updated.&quot; + BR() + 
&quot;3. In Edit mode, Check the boxes corresponding to the audit statements that apply to the root certificate, and provide the test websites if the root certificate is trusted for TLS/SSL.&quot; + BR() + 
&quot;** If the root certificate is enabled for EV treatment, then the TLS/SSL certificates in the test websites must be EV.&quot; + BR() + 
&quot;4. Click &apos;Edit&apos; and &apos;Save&apos; buttons as needed to provide the information.&quot; + BR() + 
&quot;5. When finished, click on the &apos;Case No&apos; to go back to the Case page.&quot;
)</defaultValue>
        <label>Instructions</label>
        <length>770</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuer__c</fullName>
        <inlineHelpText>Certificate Issuer Common Name + Certificate Issuer Organizational Unit + Certificate Issuer Organization + Certificate Issuer Country</inlineHelpText>
        <label>Issuer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Client_Authentication__c</fullName>
        <label>Justification - Client Authentication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Document_Signing__c</fullName>
        <label>Justification - Document Signing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_EV_for_Code_Signing__c</fullName>
        <label>Justification - EV for Code Signing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_EV_for_SSL__c</fullName>
        <label>Justification - EV for SSL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_OCSP_Signing__c</fullName>
        <label>Justification - OCSP Signing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Other__c</fullName>
        <label>Justification - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Secured_Email__c</fullName>
        <label>Justification - Secured Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Server_Authentication__c</fullName>
        <label>Justification - Server Authentication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Time_Stamping__c</fullName>
        <label>Justification - Time Stamping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Usage__c</fullName>
        <label>Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lint_Test_Description__c</fullName>
        <defaultValue>&quot;x509lint and certlint tests are run against the TLS certificate of the valid test website and all certificates within the TLS certificate chain except for the root certificate. For more information about this test, see https://github.com/mozilla/CCADB-Tools/tree/master/capi#linting&quot;</defaultValue>
        <label>Lint Test Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lint_Test_Results__c</fullName>
        <inlineHelpText>Lint testing run on the TLS certificate for the Valid Test Website, and its certificate chain</inlineHelpText>
        <label>Lint Test Results</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lint_Test_Status__c</fullName>
        <inlineHelpText>Details are in the Test Websites Validation Results section at the bottom of this page</inlineHelpText>
        <label>Lint Test - Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft EV Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Policy_OID_s__c</fullName>
        <label>Microsoft EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Request_Status__c</fullName>
        <label>Microsoft Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Status__c</fullName>
        <label>Microsoft Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                    <default>true</default>
                    <label>Not Included</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Trust_Bits__c</fullName>
        <label>Microsoft Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Server Authentication</fullName>
                </value>
                <value>
                    <fullName>Client Authentication</fullName>
                </value>
                <value>
                    <fullName>Code Signing</fullName>
                </value>
                <value>
                    <fullName>Document Signing</fullName>
                </value>
                <value>
                    <fullName>Encrypting File System</fullName>
                </value>
                <value>
                    <fullName>IP Security End System</fullName>
                </value>
                <value>
                    <fullName>IP Security IKE Intermediate</fullName>
                </value>
                <value>
                    <fullName>IP Security Tunnel Termination</fullName>
                </value>
                <value>
                    <fullName>IP Security User</fullName>
                </value>
                <value>
                    <fullName>OCSP Signing</fullName>
                </value>
                <value>
                    <fullName>Private Key Archival</fullName>
                </value>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>Time Stamping</fullName>
                </value>
                <value>
                    <fullName>Code Signing Signing</fullName>
                    <isActive>false</isActive>
                    <label>Code Signing Signing</label>
                </value>
                <value>
                    <fullName>Secure Secure Email</fullName>
                    <isActive>false</isActive>
                    <label>Secure Secure Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints__c</fullName>
        <defaultValue>&quot;NEED: Mozilla has the ability to name constrain root certs; e.g. to *.gov or *.mil. CAs should consider if such constraints may be applied to their root certs.&quot; &amp; BR() &amp;
&quot;https://dxr.mozilla.org/mozilla-central/source/security/nss/lib/certdb/genname.c#1551&quot;</defaultValue>
        <label>Mozilla Applied Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_Fields_Verified__c</fullName>
        <label>Mozilla Fields Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Removal_Bug_No_or_Date__c</fullName>
        <label>Mozilla Removal Bug No. or Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status__c</fullName>
        <label>Mozilla Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSS_Release_When_First_Included__c</fullName>
        <label>NSS Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OU_From_Issuer_Field__c</fullName>
        <description>Organizational Unit</description>
        <inlineHelpText>Organizational Unit</inlineHelpText>
        <label>OU From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OU_From_Subject_Field__c</fullName>
        <label>OU From Subject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field__c</fullName>
        <inlineHelpText>The Organization Name and CN in the Issuer must have sufficient information about the CA Organization.</inlineHelpText>
        <label>O From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_From_Subject_Field__c</fullName>
        <label>O From Subject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PKI_Hierarchy_Verified__c</fullName>
        <label>PKI Hierarchy Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Key_Algorithm__c</fullName>
        <label>Public Key Algorithm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSA 1024 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2045 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2046 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2047 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2048 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 3072 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 4096 bits</fullName>
                </value>
                <value>
                    <fullName>EC secp256r</fullName>
                </value>
                <value>
                    <fullName>EC secp256r1</fullName>
                </value>
                <value>
                    <fullName>EC secp384r1</fullName>
                </value>
                <value>
                    <fullName>EC secp512r1</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>